# kst_cad_tool

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  benchmark_opt.py  pyproject.toml  results_python_case2b_cube_tradeoff.txt  results_python_case3c_cover_orient.txt  results_python_case3c_cover_orient_full.txt  results_python_case4a_endcap_tradeoff.txt  results_python_case4a_endcap_tradeoff_full.txt  results_python_case4b_endcap_circlinsrch.txt  results_python_case4b_endcap_circlinsrch_full.txt  results_python_case5_printer_allscrews.txt  results_python_case5c_printer_snap_orient.txt  results_python_case5f2_printer_sideline_size.txt  results_python_case5rev_a_printer_2screws.txt  results_python_case5rev_b_printer_flat_partingline.txt  results_python_case5rev_b_printer_flat_partingline_full.txt  results_python_case5rev_d_printer_remove2_bot_screw.txt  testcase.stl
.cursor/: environment.json  worktrees.json
_tmp_wizard/: empty_wizard_input.json  results_wizard_empty_test.txt
benchmarks/: README.md  test_benchmark_surrogates.py
docs/: CAD_RUNTIME_PATHS.md  COMPARISON.md  DEEP_COMPARISON.md  FUSION_CIRCULAR_CAP_CASE.md  GENERIC_INPUT_FORMAT.md  INVENTOR_ADDIN_DEVELOPMENT.md  MATLAB_COMPILER.md  MATLAB_INTEGRATION.md  MATLAB_TO_PYTHON_COVERAGE.md  OPTIMIZATION_PARITY_DEMO.md  PARKED.md  PROGRESS.md  PROJECT_STATUS_SUMMARY.md  PROJECT_TIMELINE.md  README.md  THESIS_COMPARISON.md  THESIS_PROGRESS_UPDATE.md  WIZARD_DEMO_MEETING_GUIDE.md  octave_python_comparison_raw.csv  supervisor_progress_update_2026-03-26.md
examples/: run_simple_case.py
fusion360_addin/: README.md  TREE.md  build_bundle.py
inventor_addin/: ApplicationAddInServer.cs  Autodesk.KstAnalysisWizard.Inventor.addin  InputFileGenerator.cs  InvGeometrySelector.cs  KstAnalysisWizardAddIn.csproj  README.md
matlab_script/: README.md  Result - case1a_chair_height.html  Result - case4a_endcap_tradeoff.html  Result - case5b_printer_4screws_line.html  Result - case5f1_printer_line_size.html  benchmark_wizard_analysis.m  case1a_chair_height.mat  case4a_endcap_tradeoff.mat  case5b_printer_4screws_line.eps  case5b_printer_4screws_line.fig  case5b_printer_4screws_line.mat  case5f1_printer_line_size  results_matlab_case1a_chair_height_full.txt  results_matlab_case2a_cube_scalability_full.txt  results_matlab_case3a_cover_leverage_full.txt  results_matlab_case3b_cover_symmetry_full.txt  results_matlab_case3c_cover_orient_full.txt  results_matlab_case4a_endcap_tradeoff.txt  results_matlab_case4a_endcap_tradeoff_full.txt  results_matlab_case4b_endcap_circlinsrch_full.txt  results_matlab_case5_printer_allscrews_full.txt  results_matlab_case5a_printer_4screws_orient_full.txt  results_matlab_case5f1_printer_line_size_full.txt  run_case_batch.m  (+15 more)
(+266 files in other folders)
