[project]
name = "kst_rating_tool"
version = "0.1.0"
description = "Kinematic Screw Theory-based mechanical assembly rating engine (Python port of Rusli MATLAB tools)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Diovandi Basheera Putra" }
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
optimization = ["scikit-learn>=1.2"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

